--- a/src/views/form.ejs
+++ b/src/views/form.ejs
@@ -25,6 +25,7 @@
         cursor: pointer;
     }
         </style>
+       
 </head>
 
 <body>
@@ -50,25 +51,22 @@
   </div>
   </form>
   <p>---------------------------------------</p>
-  <form>
+  <form action="/post-edit" method="post">
     <div style="color: royalblue;">EDIT USER</div>
     <div class="form-row col-6">
+     
       <div class="col">
-        <input type="text" class="form-control" placeholder="First name" name="firstName" value="<% if(user==null){ %>
-          <%='' %>
-          <% } else{ %> 
-          <%= user.firstName %>
-          <% } %>
-         %>">
+
+        <input  style ="text-align: left" type="text" class="form-control" placeholder="First name" name="firstName" 
+        value="<% if(user===null) {%><% }else{ %><%=user.firstName%><% }%>">
+         
       </div>
       <div class="col">
-        <input type="text" class="form-control" placeholder="Last name" name="lastName" value="<% if(user==null){ %>
-          <%='' %>
-          <% } else{ %> 
-          <%= user.lastName %>
-          <% } %>
-         %>">
+        <input style ="text-align: left" type="text" class="form-control" placeholder="Last name" name="lastName" 
+        value="<% if(user===null) {%><% }else{ %><%=user.lastName%><% }%>">
       </div>
+      <input style ="text-align: left" type="text" name="id" 
+      value="<% if(user===null) {%><% }else{ %><%=user.id%><% }%>" hidden>
     </div>
     <br><button>OK</button>
 
@@ -90,7 +88,8 @@
          <td><%= dataTable[i].firstName %></td>
          <td><%= dataTable[i].lastName %></td>
          <td><a href="/edit-crud?id=<%= dataTable[i].id%>" type="button" class="btn-edit">Edit</a>
-          <a href="/edit-crud?id=<%= dataTable[i].id%>" type="button" class="btn-delete">Delete</a></td>
+          
+          <a href="/delete-crud?id=<%= dataTable[i].id%>" type="button" class="btn-delete">Delete</a></td>
        </tr>
     <% } %>
     </table>
